#149 #147 - Improve scheduled events and main scrollbar, add loading, and fix bugs on styles

--- a/src/stylesheets/components/content-card/content-card.scss
+++ b/src/stylesheets/components/content-card/content-card.scss
@@ -1,13 +1,11 @@
 // base file for all content-cards
 
 .content-card {
-  margin-bottom: $spacing-base;
-  width: 100%;
-  flex-grow: 0;
+  margin-bottom:  $spacing-base ;
   box-shadow: 0 2px 6px rgba($neutral-l-color,1);
+  width: 100%;
 
   &-pinned {
-    transform: scale(1.02);
     box-shadow: 0 2px 6px rgba($neutral-d-color, 0.2);
 
     &-button {
@@ -74,6 +72,10 @@
 
   &-dropdown {
     position: relative;
+
+    & > .dropdown-menu {
+      right: 0;
+    }
   }
 
   .content-text {
