--- a/src/stylesheets/components/content-card/content-multiple-choice.scss
+++ b/src/stylesheets/components/content-card/content-multiple-choice.scss
@@ -50,9 +50,14 @@
 }
 
 .content-column-order {
-  &-options {
-    width: 500px;
+  &-container {
+    display: flex;
     margin: $spacing-small 0;
+  }
+
+  &-choices, &-answers {
+    width: 500px;
+    padding: $spacing-small;
   }
 
   &-text {
@@ -62,8 +67,13 @@
     white-space: nowrap;
   }
 
+  &-answers {
+    background-color: $border-color;
+  }
+
   &-drag {
     margin-bottom: $spacing-tiny;
+    flex-basis: 50%;
 
     .draggable {
       border-radius: 20px;
@@ -71,10 +81,17 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      margin-top: $spacing-tiny;
       
       &-option {
         background-color: $primary-color;
         border: 2px solid $primary-color;
+        color: $white-color;
+      }
+
+      &-answer {
+        background-color: lighten($primary-color, 10);
+        border: 2px solid lighten($primary-color, 10);
         color: $white-color;
       }
 
